# qidk

./: .gitattributes  LICENSE  README.md  repolint.json
.github/: dependabot.yml
.github/workflows/: qcom-preflight-checks.yml  stale-issues.yaml
Examples/Model-Conversion-Layer-Replacement/class/: CustomHardsigmoid.py  CustomHardswish.py
Examples/Model-Conversion-UDO-SELU/: README.md  raw_list.txt
Examples/Model-Conversion-UDO-SELU/config/: Selu.json
Examples/Model-Conversion-UDO-SELU/scripts/: Execute_on_Target_CPU.ipynb
Examples/Model-Conversion-UDO-SELU/selu_cpp_implementation/: Selu.cpp
Examples/Python-ASR-wav2vec2/: README.md
Examples/Python-ASR-wav2vec2/automatic_speech_recognition_android_app/app/src/main/cpp/: CMakeLists.txt  inference.cpp  inference_helper.cpp  native-lib.cpp
Examples/Python-ASR-wav2vec2/automatic_speech_recognition_android_app/app/src/main/cpp/inc/hpp/: CreateUserBuffer.hpp  Util.hpp  inference.h
Examples/Python-ASR-wav2vec2/automatic_speech_recognition_android_app/app/src/main/cpp/inc/zdl/DlContainer/: DlContainer.h
Examples/Python-ASR-wav2vec2/automatic_speech_recognition_android_app/app/src/main/cpp/inc/zdl/DlSystem/: IBufferAttributes.h  SnpeApiExportDefine.h  UserBufferMap.h
Examples/Python-ASR-wav2vec2/automatic_speech_recognition_android_app/app/src/main/cpp/inc/zdl/PlatformValidator/: PlatformValidator.h
Examples/Python-ASR-wav2vec2/automatic_speech_recognition_android_app/app/src/main/cpp/inc/zdl/SNPE/: SNPEBuilder.h
Examples/QNN-Model-Example-EnhancementGAN/: README.md
Examples/QNN-Model-Example-SESR/: README.md
GenAI-Solutions/AI-Assistant/app/: build.gradle
GenAI-Solutions/ASR-LLM-TTS/: README.md
GenAI-Solutions/speech_to_image/: README.md
GenAI-Solutions/speech_to_image/speech_to_image/app/src/main/cpp/prepare/: CMakeLists.txt
GenAI-Solutions/speech_to_image/speech_to_image/app/src/main/cpp/speech_to_image/: CMakeLists.txt  speech_to_image-native.cpp
GenAI-Solutions/speech_to_image/speech_to_image/app/src/main/cpp/speech_to_image/src/: QnnSpeechToImage.hpp  SpeechToImage.cpp
GenAI-Solutions/speech_to_image/speech_to_image/app/src/main/cpp/speech_to_image/src/Log/: AndroidLogger.cpp
GenAI-Solutions/speech_to_image/speech_to_image/app/src/main/cpp/speech_to_image/src/LogMel/src/: preprocess.cpp
GenAI-Solutions/speech_to_image/speech_to_image/app/src/main/cpp/speech_to_image/src/Utils/: DataUtil.hpp  DynamicLoadUtil.cpp  DynamicLoadUtil.hpp  IOTensor.cpp  QnnSpeechToImageUtils.hpp  raw_image_to_png.cpp
Model-Enablement/Model-Accuracy-Mixed-Precision/: Accuracy_Analyzer_YoloV8.ipynb  README.md  encoding_format.encodings
Model-Enablement/Model-Conversion-Layer-Replacement/: README.md
Model-Enablement/Model-Conversion-UDO-SELU/: README.md
NLPSolution1-QuestionAnswering/: README.md
NLPSolution1-QuestionAnswering/QuestionAnswering/: gradlew
NLPSolution1-QuestionAnswering/scripts/: generate_representative_dataset_squadv2.py  logits_to_F1_score.py
NLPSolution2-SentimentAnalysis/: README.md
NLPSolution2-SentimentAnalysis/SentimentAnalysis/: gradlew.bat
NLPSolution2-SentimentAnalysis/scripts/: get_accuracy_score.py
NLPSolution2-SentimentAnalysis/validation_set/: dsp_accuracy_test.json  ondevice_perf_test.json
QHCI/: README.md
QHCI/hvx_cv/: Makefile  android.min  android_deps.min  build_android.sh  build_hexagon.sh  cpu.min  flash.sh  hexagon.min  hexagon_deps.min  qhci_api_generator.py
QHCI/hvx_cv/sampleApp/: CMakeLists.txt  Example_Readme.md  main.c
Solutions/GenAI/AI-Assistant/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Solutions/GenAI/AI-Assistant/app/src/main/cpp/genie/: GenieCommon.h
Solutions/NLPSolution1-QuestionAnswering/: README.md
Solutions/NLPSolution2-SentimentAnalysis/: README.md
Solutions/NLPSolution3-AutomaticSpeechRecognition-Whisper/: README.md
Solutions/NLPSolution3-AutomaticSpeechRecognition-Whisper/Android_App_Whisper/app/src/main/cpp/: CMakeLists.txt  dr_wav.h  inference.cpp  inference_helper.cpp  native-lib_pre_post.cpp  whisper.h
Solutions/NLPSolution3-AutomaticSpeechRecognition-Whisper/Android_App_Whisper/app/src/main/cpp/inc/hpp/: CreateUserBuffer.hpp  LoadInputTensor.hpp  inference.h
Solutions/NLPSolution3-AutomaticSpeechRecognition-Whisper/Android_App_Whisper/app/src/main/cpp/inc/zdl/DlSystem/: DlError.h  IOBufferDataTypeMap.h  RuntimeList.h  TensorShapeMap.h  UserMemoryMap.h
Solutions/NLPSolution3-AutomaticSpeechRecognition-Whisper/Android_App_Whisper/app/src/main/cpp/inc/zdl/SNPE/: ApplicationBufferMap.h  SNPE.h
Solutions/VisionSolution1-ObjectDetection/: README.md
Solutions/VisionSolution1-ObjectDetection-DETR/: GenerateDLC.ipynb  README.md  build.gradle  gradle.properties  gradlew  resolveDependencies.sh
Solutions/VisionSolution1-ObjectDetection-YoloNas/: GenerateDLC.ipynb  README.md  local.properties  resolveDependencies.sh
Solutions/VisionSolution2-ImageSuperResolution/: README.md
Solutions/VisionSolution3-ImageEnhancement/: README.md  list.txt
Solutions/VisionSolution4-PoseEstimation/: GenerateDLC.ipynb  README.md  local.properties  resolveDependencies.sh
Tools/pysnpe_utils/: .gitignore  README.md  setup.py
Tools/snpe-docker/: Dockerfile  Makefile.config  README.md
Tools/snpe-helper/: LE_changes.patch  README.md  README_LE_1_0.md  requirements.txt  setup.py
Tools/snpe-helper/snpehelper/: CMakeLists.txt  CMakeLists_LE1.0.txt  SNPERuntime.cpp  SNPERuntime.h  Utils.h  __init__.py  dllmain.cpp  snpehelper.cpp  snpehelper.h
Tools/snpe_qnn_docker/: README.md  dockerfile  setup_env.sh
VisionSolution1-ObjectDetection/: README.md  gradlew.bat
VisionSolution1-ObjectDetection/app/: build.gradle
VisionSolution2-ImageSuperResolution/: gradlew
VisionSolution2-ImageSuperResolution/superresolution/: build.gradle
VisionSolution3-ImageEnhancement/: build.gradle  gradlew.bat
VisionSolution3-ImageEnhancement/data/: img1.raw  img3.raw
solutions/NLPSolution2-SentimentAnalysis/: makefile
solutions/VisionSolution2-ImageSuperResolution/: settings.gradle
solutions/VisionSolution3-ImageEnhancement/: README.md
(+589 files in other folders)
